--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "adm-zip": "^0.5.16",
         "csv-parser": "^3.2.0",
         "express": "^5.1.0",
         "fs": "^0.0.1-security",
@@ -22,6 +23,7 @@
         "nodemailer": "^6.10.0"
     },
     "devDependencies": {
+        "@types/adm-zip": "^0.5.7",
         "@types/express": "^5.0.1",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/multer": "^1.4.12",
