--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "description": "",
     "dependencies": {
         "adm-zip": "^0.5.16",
+        "axios": "^1.8.4",
+        "crypto": "^1.0.1",
         "csv-parser": "^3.2.0",
         "express": "^5.1.0",
         "fs": "^0.0.1-security",
         "jsonwebtoken": "^9.0.2",
         "moment": "^2.30.1",
         "multer": "^1.4.5-lts.2",
-        "node-cron": "^3.0.3",
         "nodemailer": "^6.10.0"
     },
     "devDependencies": {
@@ -35,7 +36,6 @@
         "@types/express": "^5.0.1",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/multer": "^1.4.12",
-        "@types/node-cron": "^3.0.11",
         "@types/nodemailer": "^6.4.17",
         "typescript": "^5.x.x"
     }
