--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
         "copy:modules": "cp -R node_modules dist/node_modules",
         "copy:config": "cp vcr.yml dist/vcr.yml",
         "copy:package": "cp package.json dist/",
-        "debug:vcr": "npm run clean && npm run build && npm run copy:modules && npm run copy:config && npm run copy:package && cd dist && npm run debug",
-        "deploy:vcr": "npm run clean && npm run build && npm run copy:modules && npm run copy:config && npm run copy:package && cd dist && npm run deploy",
+        "copy:public": "cp -r src/public dist/public",
+        "debug:vcr": "npm run clean && npm run build && npm run copy:modules && npm run copy:config && npm run copy:package && npm run copy:public && cd dist && npm run debug",
+        "deploy:vcr": "npm run clean && npm run build && npm run copy:modules && npm run copy:config && npm run copy:package && npm run copy:public && cd dist && npm run deploy",
         "start": "node dist/index.js",
         "dev": "npm run build && npm start",
         "debug": "/Users/warodriguez/.vcr/bin/vcr debug",
