--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "adm-zip": "^0.5.16",
         "axios": "^1.8.4",
+        "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "csv-parser": "^3.2.0",
         "express": "^5.1.0",
